force-app/main/default/objects/Case/fields/Baja_de_usuarios_erroneos__c.field-meta.xml
<CustomField>
    <fullName>Baja_de_usuarios_erroneos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baja de usuarios erróneos</label>
    <type>Checkbox</type>
</CustomField>