force-app/main/default/objects/Case/fields/CaseMilestoneCreacion__c.field-meta.xml
<CustomField>
    <fullName>CaseMilestoneCreacion__c</fullName>
    <formula>SlaStartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseMilestoneCreacion</label>
    <type>DateTime</type>
</CustomField>