force-app/main/default/objects/Case/fields/checkCaducado__c.field-meta.xml
<CustomField>
    <fullName>checkCaducado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkCaducado</label>
    <type>Checkbox</type>
</CustomField>