force-app/main/default/objects/Case/fields/Codigo_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_factura__c</fullName>
    <label>Código de factura</label>
    <length>20</length>
    <type>Text</type>
</CustomField>