force-app/main/default/objects/Case/fields/Codigo_tarjeta_proporcionado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_tarjeta_proporcionado__c</fullName>
    <label>Código tarjeta proporcionado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>