force-app/main/default/objects/Case/fields/Codigo_utilizado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_utilizado__c</fullName>
    <label>Código utilizado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>