force-app/main/default/objects/Case/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <label>Contenido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>