force-app/main/default/objects/Case/fields/Contratos_relacionados__c.field-meta.xml
<CustomField>
    <fullName>Contratos_relacionados__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>