force-app/main/default/objects/Case/fields/Correo__c.field-meta.xml
<CustomField>
    <fullName>Correo__c</fullName>
    <description>Correo en caso de Origen -&gt; Correo</description>
    <label>Correo</label>
    <type>Email</type>
</CustomField>