force-app/main/default/objects/Case/fields/CurrentHoldTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentHoldTime__c</fullName>
    <description>Variable para el calculo de tiempo en espera</description>
    <label>CurrentHoldTime</label>
    <type>DateTime</type>
</CustomField>