force-app/main/default/objects/Case/fields/DNI_encontrado_en_sistema__c.field-meta.xml
<CustomField>
    <fullName>DNI_encontrado_en_sistema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNI encontrado en sistema</label>
    <type>Checkbox</type>
</CustomField>