force-app/main/default/objects/Case/fields/DNI_proporcionado__c.field-meta.xml
<CustomField>
    <fullName>DNI_proporcionado__c</fullName>
    <label>DNI proporcionado</label>
    <length>9</length>
    <type>Text</type>
</CustomField>