force-app/main/default/objects/Case/fields/Documentacion_de_identificacion_enviada__c.field-meta.xml
<CustomField>
    <fullName>Documentacion_de_identificacion_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentación de identificación enviada</label>
    <type>Checkbox</type>
</CustomField>