force-app/main/default/objects/Case/fields/EmailsSent__c.field-meta.xml
<CustomField>
    <fullName>EmailsSent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EmailsSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>