force-app/main/default/objects/Case/fields/Es_reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Es_reclamacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es reclamación?</label>
    <type>Checkbox</type>
</CustomField>