force-app/main/default/objects/Case/fields/Fecha_de_caducidad_de_tarjeta_regalo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_caducidad_de_tarjeta_regalo__c</fullName>
    <label>Fecha de caducidad de tarjeta regalo</label>
    <type>Date</type>
</CustomField>