force-app/main/default/objects/Case/fields/Fecha_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_compra__c</fullName>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>