force-app/main/default/objects/Case/fields/Importe_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Importe_devolucion__c</fullName>
    <label>Importe devolución</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>