force-app/main/default/objects/Case/fields/Importe_total_Factura__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_Factura__c</fullName>
    <label>Importe total Factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>