force-app/main/default/objects/Case/fields/MensajeCorreo__c.field-meta.xml
<CustomField>
    <fullName>MensajeCorreo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MensajeCorreo</label>
    <type>Checkbox</type>
</CustomField>