force-app/main/default/objects/Case/fields/Motivo_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre__c</fullName>
    <label>Motivo de cierre</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>