force-app/main/default/objects/Case/fields/Nombre_encontrado_en_sistema__c.field-meta.xml
<CustomField>
    <fullName>Nombre_encontrado_en_sistema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nombre encontrado en sistema</label>
    <type>Checkbox</type>
</CustomField>