force-app/main/default/objects/Case/fields/Nombre_proporcionado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_proporcionado__c</fullName>
    <label>Nombre proporcionado</label>
    <length>70</length>
    <type>Text</type>
</CustomField>