force-app/main/default/objects/Case/fields/NoPermitir_cambio_estado__c.field-meta.xml
<CustomField>
    <fullName>NoPermitir_cambio_estado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoPermitir cambio estado</label>
    <type>Checkbox</type>
</CustomField>