force-app/main/default/objects/Case/fields/Nuevo_codigo_proporcionado__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_codigo_proporcionado__c</fullName>
    <label>Nuevo código proporcionado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>