force-app/main/default/objects/Case/fields/Procede_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Procede_devolucion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procede devolución</label>
    <type>Checkbox</type>
</CustomField>