force-app/main/default/objects/Case/fields/Razon_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_cierre__c</fullName>
    <description>Campo creado para la petición #29244</description>
    <label>Razón de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cierre automático</fullName>
            </value>
            <value>
                <fullName>Resuelta incidencia</fullName>
            </value>
            <value>
                <fullName>Resuelta Consulta</fullName>
            </value>
            <value>
                <fullName>Cliente no responde</fullName>
            </value>
            <value>
                <fullName>No es incidencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>