force-app/main/default/objects/Case/fields/Solucion__c.field-meta.xml
<CustomField>
    <fullName>Solucion__c</fullName>
    <description>Campo creado en la petición #29244</description>
    <label>Solución</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>