force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicidad del DNI en el sistema o no coinciden el nombre y el DNI indicados</fullName>
            </value>
            <value>
                <fullName>Cliente solicita cambio de tipo impositivo</fullName>
            </value>
            <value>
                <fullName>Cliente reclama importes por incidencia en el servicio</fullName>
            </value>
            <value>
                <fullName>Error en los códigos de tarjetas regalo Movistar+Lite</fullName>
            </value>
            <value>
                <fullName>Nuevo código para los clientes de Contrato Movil que incluyen el servicio en la tarifa</fullName>
            </value>
            <value>
                <fullName>Anulación de alta con correo electrónico/Baja de usuarios</fullName>
            </value>
            <value>
                <fullName>Cliente solicita devolución de importes por baja</fullName>
            </value>
            <value>
                <fullName>Contenido de Suscripción</fullName>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>