force-app/main/default/objects/Case/fields/Tarjeta_encontrada__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_encontrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarjeta encontrada</label>
    <type>Checkbox</type>
</CustomField>