force-app/main/default/objects/Case/fields/Tarjeta_utilizada__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_utilizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarjeta utilizada</label>
    <type>Checkbox</type>
</CustomField>