force-app/main/default/objects/Case/fields/Tiempo_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_del_caso__c</fullName>
    <description>Tiempo total que el caso lleva abierto</description>
    <formula>(Now()-CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo del caso (horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>