force-app/main/default/objects/Case/fields/Tiempo_en_espera__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_en_espera__c</fullName>
    <formula>(Now()- CurrentHoldTime__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo en espera (horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>