force-app/main/default/objects/Case/fields/Tipo_impositivo_actual__c.field-meta.xml
<CustomField>
    <fullName>Tipo_impositivo_actual__c</fullName>
    <label>Tipo impositivo actual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>