force-app/main/default/objects/Case/fields/Tipo_impositivo_solicitado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_impositivo_solicitado__c</fullName>
    <label>Tipo impositivo solicitado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>