force-app/main/default/objects/Case/fields/unread_mail__c.field-meta.xml
<CustomField>
    <fullName>unread_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>unread_mail</label>
    <type>Checkbox</type>
</CustomField>