force-app/main/default/objects/Case/fields/Usuario_proporcionado__c.field-meta.xml
<CustomField>
    <fullName>Usuario_proporcionado__c</fullName>
    <label>Usuario proporcionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>