force-app/main/default/objects/Case/fields/Usuarios_dado_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Usuarios_dado_de_baja__c</fullName>
    <label>Usuarios dado de baja</label>
    <type>TextArea</type>
</CustomField>