force-app/main/default/objects/Case/recordTypes/Consulta_de_oferta_comercial.recordType-meta.xml
<RecordType>
    <fullName>Consulta_de_oferta_comercial</fullName>
    <active>true</active>
    <businessProcess>Consulta de oferta comercial</businessProcess>
    <label>Consulta de oferta comercial</label>
</RecordType>