force-app/main/default/objects/Case/recordTypes/Consulta_gestion_de_los_datos_del_cliente.recordType-meta.xml
<RecordType>
    <fullName>Consulta_gestion_de_los_datos_del_cliente</fullName>
    <active>true</active>
    <businessProcess>Consulta gestión de los datos del cliente</businessProcess>
    <label>Consulta gestión de los datos del cliente</label>
</RecordType>