force-app/main/default/objects/Case/recordTypes/Incidencia_acceso_al_contenido.recordType-meta.xml
<RecordType>
    <fullName>Incidencia_acceso_al_contenido</fullName>
    <active>true</active>
    <businessProcess>Incidencia acceso al contenido</businessProcess>
    <label>Incidencia acceso al contenido</label>
</RecordType>