force-app/main/default/objects/Case/recordTypes/Incidencia_acceso_cliente.recordType-meta.xml
<RecordType>
    <fullName>Incidencia_acceso_cliente</fullName>
    <active>true</active>
    <businessProcess>Incidencia acceso cliente</businessProcess>
    <label>Incidencia acceso cliente</label>
</RecordType>