force-app/main/default/objects/Case/recordTypes/Incidencia_proceso_alta.recordType-meta.xml
<RecordType>
    <fullName>Incidencia_proceso_alta</fullName>
    <active>true</active>
    <businessProcess>Incidencia proceso alta</businessProcess>
    <label>Incidencia proceso alta</label>
</RecordType>