force-app/main/default/objects/Case/recordTypes/Incidencia_proceso_baja.recordType-meta.xml
<RecordType>
    <fullName>Incidencia_proceso_baja</fullName>
    <active>true</active>
    <businessProcess>Incidencia proceso baja</businessProcess>
    <label>Incidencia proceso baja</label>
</RecordType>