force-app/main/default/objects/Case/recordTypes/Info_proceso_alta.recordType-meta.xml
<RecordType>
    <fullName>Info_proceso_alta</fullName>
    <active>true</active>
    <businessProcess>Consulta de proceso de alta</businessProcess>
    <label>Consulta de proceso de alta</label>
</RecordType>