force-app/main/default/objects/Case/recordTypes/Info_proceso_baja.recordType-meta.xml
<RecordType>
    <fullName>Info_proceso_baja</fullName>
    <active>true</active>
    <businessProcess>Consulta de proceso de baja</businessProcess>
    <label>Consulta de proceso de baja</label>
</RecordType>