force-app/main/default/objects/Case/recordTypes/Reclamaciones_factura.recordType-meta.xml
<RecordType>
    <fullName>Reclamaciones_factura</fullName>
    <active>true</active>
    <businessProcess>Reclamaciones factura</businessProcess>
    <label>Reclamaciones factura</label>
</RecordType>