force-app/main/default/objects/Case/recordTypes/Reclamaciones_promo_alta.recordType-meta.xml
<RecordType>
    <fullName>Reclamaciones_promo_alta</fullName>
    <active>true</active>
    <businessProcess>Reclamaciones promo alta</businessProcess>
    <label>Reclamaciones promo alta</label>
</RecordType>