force-app/main/default/objects/Case/validationRules/Agente_ATC_Permisos_Modificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Agente_ATC_Permisos_Modificacion</fullName>
    <active>true</active>
    <description>El Agente solo podrá modificar campos concretos cuando el origen sea distinto de manual</description>
    <errorConditionFormula>IF($Profile.Name ==&apos;Agente ATC&apos; &amp;&amp; NOT(ISPICKVAL(Origin,&quot;Manual&quot;)) &amp;&amp; (ISCHANGED(Origin) || ISCHANGED(SuppliedEmail)),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>No tiene permisos para modificar los siguientes campos:  Cuenta, Origen, Contrato y Email</errorMessage>
</ValidationRule>