force-app/main/default/objects/Case/validationRules/Caso_Manual.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_Manual</fullName>
    <active>false</active>
    <description>Validación sobre caso para que permita crear casos con Origen Manual solo para el perfil Agente ATC.</description>
    <errorConditionFormula>IF(ISNEW() &amp;&amp; ISPICKVAL( Origin , &apos;Manual&apos;),
			IF(OR($Profile.Name == &apos;Agente ATC&apos;, $Profile.Name == &apos;Integration User&apos;), 
						FALSE, TRUE) 
			, FALSE)</errorConditionFormula>
    <errorDisplayField>Origin</errorDisplayField>
    <errorMessage>Origen Manual solo permitido para el perfil Agente ATC.</errorMessage>
</ValidationRule>