force-app/main/default/objects/Case/validationRules/CheckModificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckModificacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED( Status ) ,
   ISPICKVAL(Status,&quot;On Hold&quot;),
   EmailsSent__c  = 0
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Debe enviar correo al cliente para pasar al estado en espera.</errorMessage>
</ValidationRule>