force-app/main/default/objects/Case/validationRules/Desactivar_Modificacion_SI_Caso_Cerrado.validationRule-meta.xml
<ValidationRule>
    <fullName>Desactivar_Modificacion_SI_Caso_Cerrado</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
NOT(ISNEW()),
ISPICKVAL( PRIORVALUE(Status) , &apos;Closed&apos;)
,
 $Profile.Name &lt;&gt; &apos;Integration User&apos;

), true, false)</errorConditionFormula>
    <errorMessage>Case closed</errorMessage>
</ValidationRule>