force-app/main/default/objects/Case/validationRules/Es_reclamacion_modificable_In_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Es_reclamacion_modificable_In_progress</fullName>
    <active>true</active>
    <description>el campo ¿Es reclamación? solo se puede modificar en el estado In progress</description>
    <errorConditionFormula>IF( ISCHANGED( Es_reclamacion__c) &amp;&amp; !ISPICKVAL(  Status , &apos;In progress&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Es_reclamacion__c</errorDisplayField>
    <errorMessage>Solo se puede modificar en estado En curso</errorMessage>
</ValidationRule>