force-app/main/default/objects/Case/listViews/Correo_Case.listView-meta.xml
<ListView>
    <fullName>Correo_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Correo</label>
    <queue>Correo</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>