force-app/main/default/objects/Case/listViews/En_espera_Case.listView-meta.xml
<ListView>
    <fullName>En_espera_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>En espera</label>
    <queue>EnEspera</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>